xidlc/src/driver/tests/snapshots/xidlc__driver__tests__cpp_cpp_gen__annotation_basic.snap
---
source: xidlc/src/driver/tests/mod.rs
expression: output
---
===============
annotation_basic.cpp
===============
/* Generated by xidlc
* xidlc_version: 0.1.0
* xidlc_timestamp: 1970-01-01 00:00
*/
#include "annotation_basic.h"
===============
annotation_basic.h
===============
/* Generated by xidlc
 * xidlc_version: 0.1.0
 * xidlc_timestamp: 1970-01-01 00:00
 */

#ifndef ANNOTATION_BASIC.H
#define ANNOTATION_BASIC.H
#include "xidl_xcdr.hpp"
#include <array>
#include <cstddef>
#include <cstdint>
#include <exception>
#include <map>
#include <memory>
#include <string>
#include <vector>

struct S {

    int32_t a;

    int16_t b;

};

template <>
struct xidl::xcdr::Traits<S> {
  template <typename Codec>
  static inline xidl::xcdr::BufferResult serialize(xidl::xcdr::Serializer<Codec>& ser, const S& value) {
    xidl::xcdr::BufferResult res{XcdrFfiError::Ok, 0};

    res = ser.write(value.a);
    if (!res.ok()) {
      return res;
    }

    res = ser.write(value.b);
    if (!res.ok()) {
      return res;
    }

    return xidl::xcdr::BufferResult{XcdrFfiError::Ok, ser.position()};
  }

  template <typename Codec>
  static inline xidl::xcdr::BufferResult deserialize(xidl::xcdr::Deserializer<Codec>& de, S& value) {
    xidl::xcdr::BufferResult res{XcdrFfiError::Ok, 0};

    res = de.read(value.a);
    if (!res.ok()) {
      return res;
    }

    res = de.read(value.b);
    if (!res.ok()) {
      return res;
    }

    return xidl::xcdr::BufferResult{XcdrFfiError::Ok, de.position()};
  }
};

enum class E {

    A,

    B

};

template <>
struct xidl::xcdr::Traits<E> {
  template <typename Codec>
  static inline xidl::xcdr::BufferResult serialize(xidl::xcdr::Serializer<Codec>& ser, E value) {
    uint32_t raw = static_cast<uint32_t>(value);
    return ser.write(raw);
  }

  template <typename Codec>
  static inline xidl::xcdr::BufferResult deserialize(xidl::xcdr::Deserializer<Codec>& de, E& value) {
    uint32_t raw = 0;
    xidl::xcdr::BufferResult res = de.read(raw);
    if (res.ok()) {
      value = static_cast<E>(raw);
    }
    return res;
  }
};

struct BM {
    enum _flags : uint32_t {

        A = 1u << 0,

        B = 1u << 1

    };

    uint32_t _value{0};
    constexpr uint32_t operator()() const { return _value; }
    constexpr operator uint32_t() const { return _value; }
    constexpr BM() = default;
    constexpr BM(uint32_t v) : _value(v) {}
    BM& operator|=(uint32_t other) { _value |= other; return *this; }
    BM& operator&=(uint32_t other) { _value &= other; return *this; }
    BM& operator^=(uint32_t other) { _value ^= other; return *this; }
};

template <>
struct xidl::xcdr::Traits<BM> {
  template <typename Codec>
  static inline xidl::xcdr::BufferResult serialize(xidl::xcdr::Serializer<Codec>& ser, const BM& value) {
    return ser.write(value._value);
  }

  template <typename Codec>
  static inline xidl::xcdr::BufferResult deserialize(xidl::xcdr::Deserializer<Codec>& de, BM& value) {
    uint32_t raw = 0;
    xidl::xcdr::BufferResult res = de.read(raw);
    if (res.ok()) {
      value._value = raw;
    }
    return res;
  }
};

class U {
public:
    int32_t _d{};

    int32_t a;

    int32_t b;

};

template <>
struct xidl::xcdr::Traits<U> {
  template <typename Codec>
  static inline xidl::xcdr::BufferResult serialize(xidl::xcdr::Serializer<Codec>& ser, const U& value) {
    xidl::xcdr::BufferResult res = ser.write(value._d);
    if (!res.ok()) {
      return res;
    }
    switch (value._d) {

      case 0:

        res = ser.write(value.a);
        if (!res.ok()) {
          return res;
        }
        break;

      default:

        res = ser.write(value.b);
        if (!res.ok()) {
          return res;
        }
        break;
    }
    return xidl::xcdr::BufferResult{XcdrFfiError::Ok, ser.position()};
  }

  template <typename Codec>
  static inline xidl::xcdr::BufferResult deserialize(xidl::xcdr::Deserializer<Codec>& de, U& value) {
    xidl::xcdr::BufferResult res = de.read(value._d);
    if (!res.ok()) {
      return res;
    }
    switch (value._d) {

      case 0:

        res = de.read(value.a);
        if (!res.ok()) {
          return res;
        }
        break;

      default:

        res = de.read(value.b);
        if (!res.ok()) {
          return res;
        }
        break;
    }
    return xidl::xcdr::BufferResult{XcdrFfiError::Ok, de.position()};
  }
};

constexpr int32_t I_ping_Hash = 18846175;

constexpr int32_t I_get_attribute_value_Hash = 3881857402;

constexpr int32_t I_set_attribute_value_Hash = 1976821110;

struct I_ping_In {

    dds::rpc::UnusedMember dummy;

};

template <>
struct xidl::xcdr::Traits<I_ping_In> {
  template <typename Codec>
  static inline xidl::xcdr::BufferResult serialize(xidl::xcdr::Serializer<Codec>& ser, const I_ping_In& value) {
    xidl::xcdr::BufferResult res{XcdrFfiError::Ok, 0};

    res = ser.write(value.dummy);
    if (!res.ok()) {
      return res;
    }

    return xidl::xcdr::BufferResult{XcdrFfiError::Ok, ser.position()};
  }

  template <typename Codec>
  static inline xidl::xcdr::BufferResult deserialize(xidl::xcdr::Deserializer<Codec>& de, I_ping_In& value) {
    xidl::xcdr::BufferResult res{XcdrFfiError::Ok, 0};

    res = de.read(value.dummy);
    if (!res.ok()) {
      return res;
    }

    return xidl::xcdr::BufferResult{XcdrFfiError::Ok, de.position()};
  }
};

struct I_ping_Out {

    dds::rpc::UnusedMember dummy;

};

template <>
struct xidl::xcdr::Traits<I_ping_Out> {
  template <typename Codec>
  static inline xidl::xcdr::BufferResult serialize(xidl::xcdr::Serializer<Codec>& ser, const I_ping_Out& value) {
    xidl::xcdr::BufferResult res{XcdrFfiError::Ok, 0};

    res = ser.write(value.dummy);
    if (!res.ok()) {
      return res;
    }

    return xidl::xcdr::BufferResult{XcdrFfiError::Ok, ser.position()};
  }

  template <typename Codec>
  static inline xidl::xcdr::BufferResult deserialize(xidl::xcdr::Deserializer<Codec>& de, I_ping_Out& value) {
    xidl::xcdr::BufferResult res{XcdrFfiError::Ok, 0};

    res = de.read(value.dummy);
    if (!res.ok()) {
      return res;
    }

    return xidl::xcdr::BufferResult{XcdrFfiError::Ok, de.position()};
  }
};

class I_ping_Result {
public:
    int32_t _d{};

    I_ping_Out result;

};

template <>
struct xidl::xcdr::Traits<I_ping_Result> {
  template <typename Codec>
  static inline xidl::xcdr::BufferResult serialize(xidl::xcdr::Serializer<Codec>& ser, const I_ping_Result& value) {
    xidl::xcdr::BufferResult res = ser.write(value._d);
    if (!res.ok()) {
      return res;
    }
    switch (value._d) {

      case dds::RETCODE_OK:

        res = ser.write(value.result);
        if (!res.ok()) {
          return res;
        }
        break;
    }
    return xidl::xcdr::BufferResult{XcdrFfiError::Ok, ser.position()};
  }

  template <typename Codec>
  static inline xidl::xcdr::BufferResult deserialize(xidl::xcdr::Deserializer<Codec>& de, I_ping_Result& value) {
    xidl::xcdr::BufferResult res = de.read(value._d);
    if (!res.ok()) {
      return res;
    }
    switch (value._d) {

      case dds::RETCODE_OK:

        res = de.read(value.result);
        if (!res.ok()) {
          return res;
        }
        break;
    }
    return xidl::xcdr::BufferResult{XcdrFfiError::Ok, de.position()};
  }
};

struct I_get_attribute_value_In {

    dds::rpc::UnusedMember dummy;

};

template <>
struct xidl::xcdr::Traits<I_get_attribute_value_In> {
  template <typename Codec>
  static inline xidl::xcdr::BufferResult serialize(xidl::xcdr::Serializer<Codec>& ser, const I_get_attribute_value_In& value) {
    xidl::xcdr::BufferResult res{XcdrFfiError::Ok, 0};

    res = ser.write(value.dummy);
    if (!res.ok()) {
      return res;
    }

    return xidl::xcdr::BufferResult{XcdrFfiError::Ok, ser.position()};
  }

  template <typename Codec>
  static inline xidl::xcdr::BufferResult deserialize(xidl::xcdr::Deserializer<Codec>& de, I_get_attribute_value_In& value) {
    xidl::xcdr::BufferResult res{XcdrFfiError::Ok, 0};

    res = de.read(value.dummy);
    if (!res.ok()) {
      return res;
    }

    return xidl::xcdr::BufferResult{XcdrFfiError::Ok, de.position()};
  }
};

struct I_get_attribute_value_Out {

    int32_t return_;

};

template <>
struct xidl::xcdr::Traits<I_get_attribute_value_Out> {
  template <typename Codec>
  static inline xidl::xcdr::BufferResult serialize(xidl::xcdr::Serializer<Codec>& ser, const I_get_attribute_value_Out& value) {
    xidl::xcdr::BufferResult res{XcdrFfiError::Ok, 0};

    res = ser.write(value.return_);
    if (!res.ok()) {
      return res;
    }

    return xidl::xcdr::BufferResult{XcdrFfiError::Ok, ser.position()};
  }

  template <typename Codec>
  static inline xidl::xcdr::BufferResult deserialize(xidl::xcdr::Deserializer<Codec>& de, I_get_attribute_value_Out& value) {
    xidl::xcdr::BufferResult res{XcdrFfiError::Ok, 0};

    res = de.read(value.return_);
    if (!res.ok()) {
      return res;
    }

    return xidl::xcdr::BufferResult{XcdrFfiError::Ok, de.position()};
  }
};

class I_get_attribute_value_Result {
public:
    int32_t _d{};

    I_get_attribute_value_Out result;

};

template <>
struct xidl::xcdr::Traits<I_get_attribute_value_Result> {
  template <typename Codec>
  static inline xidl::xcdr::BufferResult serialize(xidl::xcdr::Serializer<Codec>& ser, const I_get_attribute_value_Result& value) {
    xidl::xcdr::BufferResult res = ser.write(value._d);
    if (!res.ok()) {
      return res;
    }
    switch (value._d) {

      case dds::RETCODE_OK:

        res = ser.write(value.result);
        if (!res.ok()) {
          return res;
        }
        break;
    }
    return xidl::xcdr::BufferResult{XcdrFfiError::Ok, ser.position()};
  }

  template <typename Codec>
  static inline xidl::xcdr::BufferResult deserialize(xidl::xcdr::Deserializer<Codec>& de, I_get_attribute_value_Result& value) {
    xidl::xcdr::BufferResult res = de.read(value._d);
    if (!res.ok()) {
      return res;
    }
    switch (value._d) {

      case dds::RETCODE_OK:

        res = de.read(value.result);
        if (!res.ok()) {
          return res;
        }
        break;
    }
    return xidl::xcdr::BufferResult{XcdrFfiError::Ok, de.position()};
  }
};

struct I_set_attribute_value_In {

    int32_t value;

};

template <>
struct xidl::xcdr::Traits<I_set_attribute_value_In> {
  template <typename Codec>
  static inline xidl::xcdr::BufferResult serialize(xidl::xcdr::Serializer<Codec>& ser, const I_set_attribute_value_In& value) {
    xidl::xcdr::BufferResult res{XcdrFfiError::Ok, 0};

    res = ser.write(value.value);
    if (!res.ok()) {
      return res;
    }

    return xidl::xcdr::BufferResult{XcdrFfiError::Ok, ser.position()};
  }

  template <typename Codec>
  static inline xidl::xcdr::BufferResult deserialize(xidl::xcdr::Deserializer<Codec>& de, I_set_attribute_value_In& value) {
    xidl::xcdr::BufferResult res{XcdrFfiError::Ok, 0};

    res = de.read(value.value);
    if (!res.ok()) {
      return res;
    }

    return xidl::xcdr::BufferResult{XcdrFfiError::Ok, de.position()};
  }
};

struct I_set_attribute_value_Out {

    dds::rpc::UnusedMember dummy;

};

template <>
struct xidl::xcdr::Traits<I_set_attribute_value_Out> {
  template <typename Codec>
  static inline xidl::xcdr::BufferResult serialize(xidl::xcdr::Serializer<Codec>& ser, const I_set_attribute_value_Out& value) {
    xidl::xcdr::BufferResult res{XcdrFfiError::Ok, 0};

    res = ser.write(value.dummy);
    if (!res.ok()) {
      return res;
    }

    return xidl::xcdr::BufferResult{XcdrFfiError::Ok, ser.position()};
  }

  template <typename Codec>
  static inline xidl::xcdr::BufferResult deserialize(xidl::xcdr::Deserializer<Codec>& de, I_set_attribute_value_Out& value) {
    xidl::xcdr::BufferResult res{XcdrFfiError::Ok, 0};

    res = de.read(value.dummy);
    if (!res.ok()) {
      return res;
    }

    return xidl::xcdr::BufferResult{XcdrFfiError::Ok, de.position()};
  }
};

class I_set_attribute_value_Result {
public:
    int32_t _d{};

    I_set_attribute_value_Out result;

};

template <>
struct xidl::xcdr::Traits<I_set_attribute_value_Result> {
  template <typename Codec>
  static inline xidl::xcdr::BufferResult serialize(xidl::xcdr::Serializer<Codec>& ser, const I_set_attribute_value_Result& value) {
    xidl::xcdr::BufferResult res = ser.write(value._d);
    if (!res.ok()) {
      return res;
    }
    switch (value._d) {

      case dds::RETCODE_OK:

        res = ser.write(value.result);
        if (!res.ok()) {
          return res;
        }
        break;
    }
    return xidl::xcdr::BufferResult{XcdrFfiError::Ok, ser.position()};
  }

  template <typename Codec>
  static inline xidl::xcdr::BufferResult deserialize(xidl::xcdr::Deserializer<Codec>& de, I_set_attribute_value_Result& value) {
    xidl::xcdr::BufferResult res = de.read(value._d);
    if (!res.ok()) {
      return res;
    }
    switch (value._d) {

      case dds::RETCODE_OK:

        res = de.read(value.result);
        if (!res.ok()) {
          return res;
        }
        break;
    }
    return xidl::xcdr::BufferResult{XcdrFfiError::Ok, de.position()};
  }
};

class I_Call {
public:
    int32_t _d{};

    dds::rpc::UnknownOperation unknownOp;

    I_ping_In ping;

    I_get_attribute_value_In get_attribute_value;

    I_set_attribute_value_In set_attribute_value;

};

template <>
struct xidl::xcdr::Traits<I_Call> {
  template <typename Codec>
  static inline xidl::xcdr::BufferResult serialize(xidl::xcdr::Serializer<Codec>& ser, const I_Call& value) {
    xidl::xcdr::BufferResult res = ser.write(value._d);
    if (!res.ok()) {
      return res;
    }
    switch (value._d) {

      default:

        res = ser.write(value.unknownOp);
        if (!res.ok()) {
          return res;
        }
        break;

      case I_ping_Hash:

        res = ser.write(value.ping);
        if (!res.ok()) {
          return res;
        }
        break;

      case I_get_attribute_value_Hash:

        res = ser.write(value.get_attribute_value);
        if (!res.ok()) {
          return res;
        }
        break;

      case I_set_attribute_value_Hash:

        res = ser.write(value.set_attribute_value);
        if (!res.ok()) {
          return res;
        }
        break;
    }
    return xidl::xcdr::BufferResult{XcdrFfiError::Ok, ser.position()};
  }

  template <typename Codec>
  static inline xidl::xcdr::BufferResult deserialize(xidl::xcdr::Deserializer<Codec>& de, I_Call& value) {
    xidl::xcdr::BufferResult res = de.read(value._d);
    if (!res.ok()) {
      return res;
    }
    switch (value._d) {

      default:

        res = de.read(value.unknownOp);
        if (!res.ok()) {
          return res;
        }
        break;

      case I_ping_Hash:

        res = de.read(value.ping);
        if (!res.ok()) {
          return res;
        }
        break;

      case I_get_attribute_value_Hash:

        res = de.read(value.get_attribute_value);
        if (!res.ok()) {
          return res;
        }
        break;

      case I_set_attribute_value_Hash:

        res = de.read(value.set_attribute_value);
        if (!res.ok()) {
          return res;
        }
        break;
    }
    return xidl::xcdr::BufferResult{XcdrFfiError::Ok, de.position()};
  }
};

struct I_Request {

    dds::rpc::RequestHeader header;

    I_Call data;

};

template <>
struct xidl::xcdr::Traits<I_Request> {
  template <typename Codec>
  static inline xidl::xcdr::BufferResult serialize(xidl::xcdr::Serializer<Codec>& ser, const I_Request& value) {
    xidl::xcdr::BufferResult res{XcdrFfiError::Ok, 0};

    res = ser.write(value.header);
    if (!res.ok()) {
      return res;
    }

    res = ser.write(value.data);
    if (!res.ok()) {
      return res;
    }

    return xidl::xcdr::BufferResult{XcdrFfiError::Ok, ser.position()};
  }

  template <typename Codec>
  static inline xidl::xcdr::BufferResult deserialize(xidl::xcdr::Deserializer<Codec>& de, I_Request& value) {
    xidl::xcdr::BufferResult res{XcdrFfiError::Ok, 0};

    res = de.read(value.header);
    if (!res.ok()) {
      return res;
    }

    res = de.read(value.data);
    if (!res.ok()) {
      return res;
    }

    return xidl::xcdr::BufferResult{XcdrFfiError::Ok, de.position()};
  }
};

class I_Return {
public:
    int32_t _d{};

    dds::rpc::UnknownOperation unknownOp;

    I_ping_Result ping;

    I_get_attribute_value_Result get_attribute_value;

    I_set_attribute_value_Result set_attribute_value;

};

template <>
struct xidl::xcdr::Traits<I_Return> {
  template <typename Codec>
  static inline xidl::xcdr::BufferResult serialize(xidl::xcdr::Serializer<Codec>& ser, const I_Return& value) {
    xidl::xcdr::BufferResult res = ser.write(value._d);
    if (!res.ok()) {
      return res;
    }
    switch (value._d) {

      default:

        res = ser.write(value.unknownOp);
        if (!res.ok()) {
          return res;
        }
        break;

      case I_ping_Hash:

        res = ser.write(value.ping);
        if (!res.ok()) {
          return res;
        }
        break;

      case I_get_attribute_value_Hash:

        res = ser.write(value.get_attribute_value);
        if (!res.ok()) {
          return res;
        }
        break;

      case I_set_attribute_value_Hash:

        res = ser.write(value.set_attribute_value);
        if (!res.ok()) {
          return res;
        }
        break;
    }
    return xidl::xcdr::BufferResult{XcdrFfiError::Ok, ser.position()};
  }

  template <typename Codec>
  static inline xidl::xcdr::BufferResult deserialize(xidl::xcdr::Deserializer<Codec>& de, I_Return& value) {
    xidl::xcdr::BufferResult res = de.read(value._d);
    if (!res.ok()) {
      return res;
    }
    switch (value._d) {

      default:

        res = de.read(value.unknownOp);
        if (!res.ok()) {
          return res;
        }
        break;

      case I_ping_Hash:

        res = de.read(value.ping);
        if (!res.ok()) {
          return res;
        }
        break;

      case I_get_attribute_value_Hash:

        res = de.read(value.get_attribute_value);
        if (!res.ok()) {
          return res;
        }
        break;

      case I_set_attribute_value_Hash:

        res = de.read(value.set_attribute_value);
        if (!res.ok()) {
          return res;
        }
        break;
    }
    return xidl::xcdr::BufferResult{XcdrFfiError::Ok, de.position()};
  }
};

struct I_Reply {

    dds::rpc::ReplyHeader header;

    I_Return data;

};

template <>
struct xidl::xcdr::Traits<I_Reply> {
  template <typename Codec>
  static inline xidl::xcdr::BufferResult serialize(xidl::xcdr::Serializer<Codec>& ser, const I_Reply& value) {
    xidl::xcdr::BufferResult res{XcdrFfiError::Ok, 0};

    res = ser.write(value.header);
    if (!res.ok()) {
      return res;
    }

    res = ser.write(value.data);
    if (!res.ok()) {
      return res;
    }

    return xidl::xcdr::BufferResult{XcdrFfiError::Ok, ser.position()};
  }

  template <typename Codec>
  static inline xidl::xcdr::BufferResult deserialize(xidl::xcdr::Deserializer<Codec>& de, I_Reply& value) {
    xidl::xcdr::BufferResult res{XcdrFfiError::Ok, 0};

    res = de.read(value.header);
    if (!res.ok()) {
      return res;
    }

    res = de.read(value.data);
    if (!res.ok()) {
      return res;
    }

    return xidl::xcdr::BufferResult{XcdrFfiError::Ok, de.position()};
  }
};

class I {
public:
    virtual ~I() = default;

    virtual void ping() = 0;

    virtual int32_t value() const = 0;

    virtual void value(int32_t value) = 0;

};

#endif
