xidlc/src/driver/tests/snapshots/xidlc__driver__tests__cpp_cpp_gen__const_binary.snap
---
source: xidlc/src/driver/tests/mod.rs
expression: output
---
===============
const_binary.cpp
===============
#include "const_binary.h"
===============
const_binary.h
===============
// Generated by idlc
#pragma once
#include <array>
#include <cstddef>
#include <cstdint>
#include <exception>
#include <map>
#include <memory>
#include <string>
#include <vector>

constexpr int32_t a = 0b10;
