xidlc/src/driver/tests/snapshots/xidlc__driver__tests__cpp_cpp_gen__const_hex.snap
---
source: xidlc/src/driver/tests/mod.rs
expression: output
---
===============
const_hex.cpp
===============
/* Generated by xidlc
* xidlc_version: 0.1.0
* xidlc_timestamp: 1970-01-01 00:00
*/
#include"const_hex.h"
===============
const_hex.h
===============
/* Generated by xidlc
* xidlc_version: 0.1.0
* xidlc_timestamp: 1970-01-01 00:00
*/
#ifndef CONST_HEX_H
#define CONST_HEX_H
#include"xidl_xcdr.hpp"
#include<array>
#include<cstddef>
#include<cstdint>
#include<exception>
#include<map>
#include<memory>
#include<string>
#include<vector>

constexpr int32_t a = 0xff;
#endif
