xidlc/src/driver/tests/snapshots/xidlc__driver__tests__cpp_cpp_gen__const_oct.snap
---
source: xidlc/src/driver/tests/mod.rs
expression: output
---
===============
const_oct.cpp
===============
/* Generated by xidlc
* xidlc_version: 0.1.0
* xidlc_timestamp: 1970-01-01 00:00
*/
#include"const_oct.h"
===============
const_oct.h
===============
/* Generated by xidlc
* xidlc_version: 0.1.0
* xidlc_timestamp: 1970-01-01 00:00
*/
#ifndef CONST_OCT_H
#define CONST_OCT_H
#include"xidl_xcdr.hpp"
#include<array>
#include<cstddef>
#include<cstdint>
#include<exception>
#include<map>
#include<memory>
#include<string>
#include<vector>

constexpr int32_t a = 0 o10;
#endif
