xidlc/src/driver/tests/snapshots/xidlc__driver__tests__cpp_cpp_gen__except_dcl.snap
---
source: xidlc/src/driver/tests/mod.rs
expression: output
---
===============
except_dcl.cpp
===============
#include "except_dcl.h"
===============
except_dcl.h
===============
// Generated by idlc
#pragma once
#include "xidl_xcdr.hpp"
#include <array>
#include <cstddef>
#include <cstdint>
#include <exception>
#include <map>
#include <memory>
#include <string>
#include <vector>
